--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,15 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+bin
+.go
+.push-*
+.container-*
+.dockerfile-*
+
+go.sum
+
 .idea
 test-mail.eml
 test
