some ci changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ rpm-build:
         rpmdevtools
   script:
     - mkdir -p rpmbuild/{SOURCES, RPMS}
-    - cd rpmbuild/SOURCES; spectool -g build/bouncer.spec
+    - spectool -g -C rpmbuild/SOURCES build/bouncer.spec
     - rpmbuild -bp build/bouncer.spec
   artifacts:
     paths:
