--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ rpm-build:
         rpm-build
         rpmdevtools
   script:
-    - mkdir -p rpmbuild/{SOURCES, RPMS}
+    - mkdir -p rpmbuild/{SOURCES,RPMS,SRPMS}
     - spectool -g -C rpmbuild/SOURCES build/bouncer.spec
     - rpmbuild -bp build/bouncer.spec
   artifacts:
