some ci changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ rpm-build:
   script:
     - mkdir -p rpmbuild/{SOURCES,RPMS,SRPMS}
     - spectool -g -C rpmbuild/SOURCES build/bouncer.spec
-    - rpmbuild -bp build/bouncer.spec
+    - ls -la
+    - rpmbuild -bb build/bouncer.spec
   artifacts:
     paths:
       - "*.rpm"
