some ci changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,9 @@ build-go:
     - go mod vendor
   script:
     - /bin/sh build/build.sh
+  after_script:
+    - ls -la
+    - ls -la /bin
   artifacts:
     paths:
-      - bin/bouncer
+      - bin/${OS}_${ARCH}/bouncer
