some ci changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,8 @@ build-rpm:
   stage: build-rpm
   image: perconalab/rpmbuild:latest
   before_script:
+    - ls -la %{DISTPATH}
+    - ls -la .
     - cp -R %{DISTPATH}/bin/* SOURCES/
   script:
     - rpmbuild -bb build/bouncer.spec
