some ci changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,10 +44,9 @@ build-rpm:
   stage: build-rpm
   image: perconalab/rpmbuild:latest
   before_script:
+    - pwd
     - echo ${DISTPATH}
+    - echo ${WORKDIR}
   script:
-    - ls -la ${DISTPATH}
-    - ls -la .
-    - mkdir SOURCES
-    - cp -R ${DISTPATH}/bin/* SOURCES/
+    - cp -R ${DISTPATH}/bin/* /home/builder/rpm/SOURCES/
     - rpmbuild -bb build/bouncer.spec
