--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,8 +46,5 @@ build-rpm:
   before_script:
     - echo ${DISTPATH}
   script:
-    - ls -la ${DISTPATH}
-    - ls -la .
-    - mkdir SOURCES
-    - cp -R ${DISTPATH}/bin/* SOURCES/
+    - cp -R ${DISTPATH}/bin/* ${WORKDIR}/SOURCES/
     - rpmbuild -bb build/bouncer.spec
