some ci changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ build-rpm:
     - cp -R ${BUILD_PATH}/bin/* ${BUILD_RPM_PATH}/SOURCES/
     - rpmbuild -bb build/bouncer.spec
     - mv ${BUILD_RPM_PATH}/RPMS/x86_64/*.rpm .
+    - curl -I https://ya.ru
   artifacts:
     paths:
       - "*.rpm"
