--- a/config/bouncer.yaml.example
+++ b/config/bouncer.yaml.example
@@ -11,3 +11,80 @@ fast-check:
 
 error-codes:
   - google.com:
+      hostnames: ^.+\.google\.com$
+      block:
+        - ttl: 6m
+          codes:
+            - 550-5.1.1
+            - 553-5.1.3
+        - ttl: 1m
+          codes:
+            - 550-5.2.1
+            - 552-5.2.2
+        - ttl: 1d
+          codes:
+            - 452-4.2.2
+      pass:
+        - codes:
+            - 550-5.7.1
+            - 450-4.2.1
+
+  - microsoft.com:
+      hostnames: ^.+\.(hotmail|outlook)\.com$
+      block:
+        - ttl: 6m
+          codes:
+            - 550 5.5.0
+        - ttl: 1m
+          codes:
+            - 550 5.4.1
+      pass:
+        - codes:
+            - 550 5.7.1
+            - 550 5.7.606
+
+  - mail.ru:
+      hostnames: ^.+\.mail\.ru$
+      block:
+        - ttl: 6m
+          codes:
+            - ~ ^550 .+user (not found|is terminated)
+            - ~ ^550 .+(Ill-formatted email|Invalid mPOP user) address
+        - ttl: 1m
+          codes:
+            - ~ ^550 .+account is disabled
+      pass:
+        - codes:
+            - ~ ^550 spam message rejected
+
+  - icloud.com:
+      hostnames: ^.+\.icloud\.com$
+      block:
+        - ttl: 6m
+          codes:
+            - 550 5.1.1
+            - 550 5.2.1
+        - ttl: 1m
+          codes:
+            - 450 4.2.2
+      pass:
+        - codes:
+            - 550 5.7.0
+            - 550 5.7.1
+            - 451 4.7.1
+
+  - yandex.ru:
+      hostnames: ^.+\.yandex\.(ru|net)$
+      block:
+        - ttl: 6m
+          codes:
+            - 550 5.7.1 No such user!
+            - 550 5.7.1 Policy rejection
+        - ttl: 1w
+          codes:
+            - 550 5.2.2
+      pass:
+        - codes:
+            - 554 5.7.1
+            - 551 5.3.0
+
